spaced them out

--- a/src/index.css
+++ b/src/index.css
@@ -406,17 +406,20 @@ FEATURES
   height: 21px;
   background-color: rgb(204, 204, 204);
   width: 100%;
+  margin: 3px 2px;
 }
 
 .book__rating--skeleton {
   width: 100px;
   background-color: rgb(204, 204, 204);
+  margin: 3px 2px;
   height: 19px;
 }
 
 .book__price--skeleton {
   width : 200px;
   background-color: rgb(204, 204, 204);
+  margin: 3px 2px;
   height: 19px;
 }
 
